--- a/2D Superhot/index.html
+++ b/2D Superhot/index.html
@@ -21,7 +21,7 @@
   <p>MADE BY ULVIN NECEFOV 
     <a href="https://twitter.com/Ulvin97917286" target="_blank"><i class="fa fa-twitter"></i></a>
     <a href="https://github.com/UyurGezerO" target="_blank"><i class="fa fa-github"></i></a>
-    <a href="http://www.benjaminmiles.com/blog/2016/2/29/superhot-2d" target="_blank"><i class="fa fa-external-link-square"></i></a>
+    <a href="http://oyunpaketim.club/" target="_blank"><i class="fa fa-external-link-square"></i></a>
   </p>
   
 </div>
